# micro_auth

./: .env.dev  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
micro_auth/: conf.py  main.py
tests/: test_micro_auth.py
