[tool.poetry]
name = "micro-auth"
version = "0.1.0"
description = ""
authors = ["wojwarych"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["uvicorn"], version = "^0.85.1"}
fastapi-azure-auth = "^3.5.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
